# doba-s

./: .gitignore  README.md  app_test.py  config.py  inference_benchmark.py  llm.py  main.py  pyproject.toml  requirements.txt  run.py  server.py  start.py  stream.py  test_ollama.py  test_structured_output.py  test_tools.py  todo-list-2024-09-20.json  todo.txt  todo_list.json  tts.py  tts_bark.py
agents/: manager.py  todo.py  todo_agent.py
app/: dashboard.py
app/components/: input_card.py
ci/: Dockerfile  docker-compose.yml
llm/: __init__.py  agent.py  initialize_agents.py  invoke.py  query.py  stream.py  task.py
notes/: resources.txt
tasks/: todo.py
tests/: test_spotify.py
tools/: spotify.py  todo.py
utils/: converter.py  file_download.py  log.py  printing.py
